--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 GOOGLE_ID=859401695191-h2g2jt6fg13sjd99ug0eepfamsn2i4r9.apps.googleusercontent.com
 GOOGLE_SECRET=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
 NEXTAUTH_SECRET=secret
-DATABASE_URL="mysql://u9dabkh89x7nme7c1h5m:pscale_pw_LNi9xvkPOt2oXlWZvzc8A3xLtQCTJiZg6p4BFyeiAAd@aws.connect.psdb.cloud/miwiki-dev?sslaccept=strict"
+DATABASE_URL="mysql://gjstpeqix36emc564our:pscale_pw_5EpqKNhtFShbHVLFlYWqSTrT4U3bnrl9jf1DNHE8e8M@aws.connect.psdb.cloud/miwiki-dev?sslaccept=strict"
 NEXTAUTH_URL=http://localhost:3000
+
+
