--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_ID=859401695191-h2g2jt6fg13sjd99ug0eepfamsn2i4r9.apps.googleusercontent.com
 GOOGLE_SECRET=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
 NEXTAUTH_SECRET=secret
-DATABASE_URL="mysql://gjstpeqix36emc564our:pscale_pw_5EpqKNhtFShbHVLFlYWqSTrT4U3bnrl9jf1DNHE8e8M@aws.connect.psdb.cloud/miwiki-dev?sslaccept=strict"
+DATABASE_URL="mysql://nnq8di1rbug502696n3q:pscale_pw_VFpD3MrxeEzvUTz9BLnO0KzRGYm38oHxs2CZsOq3QLp@aws.connect.psdb.cloud/miwiki-dev?sslaccept=strict"
 NEXTAUTH_URL=http://localhost:3000
 
 
